--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
    <div class="adine" data-aos="fade-left" data-aos-delay="300">
       <span></span>
       <h3>Happy Birthday, Love!</h3>
-      <p>Love, i made a song for you. nakita mo naman galaxy themed ginawa ko dahil pag nakikita ko yung galaxy, e naalala talaga kita palagi. </p>
+      <p>Love, i made a song for you and nakita mo naman galaxy themed ginawa ko dahil pag nakikita ko yung galaxy, e naalala talaga kita palagi. </p>
       <p>Sana magustuhan mo itong pinag gagagawa ko mahal. play mo yung video sa ibaba.</p>
       <p>I LOVE YOU SO MUCH, MY LOVE!</p>
    </div>
